--- a/.github/workflows/parse-jobs.yml
+++ b/.github/workflows/parse-jobs.yml
@@ -62,7 +62,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add src/data/
           git commit -m "🤖 Auto-update jobs data - $(date '+%Y-%m-%d %H:%M')" || exit 0
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+          git push https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
           
       - name: Create summary
         run: |
