Fix GitHub Action push conflicts - add automatic conflict resolution

--- a/.github/workflows/parse-jobs.yml
+++ b/.github/workflows/parse-jobs.yml
@@ -64,6 +64,7 @@ jobs:
           git config --local user.name "GitHub Action"
           git add src/data/
           git commit -m "🤖 Auto-update jobs data - $(date '+%Y-%m-%d %H:%M')" || exit 0
+          git pull origin main --rebase || git pull origin main --strategy=ours || true
           git push origin main
           
       - name: Create summary
