⏰ TEMP: Change GitHub Action schedule to every 5 minutes for testing

--- a/.github/workflows/parse-jobs.yml
+++ b/.github/workflows/parse-jobs.yml
@@ -2,8 +2,10 @@ name: Parse Jobs Daily
 
 on:
   schedule:
-    # Запускаем каждый день в 2:00 UTC (4:00 по польскому времени)
-    - cron: '0 2 * * *'
+    # ВРЕМЕННО: запускаем каждые 5 минут для тестирования
+    - cron: '*/5 * * * *'
+    # Оригинальное расписание (закомментировано):
+    # - cron: '0 2 * * *'  # Каждый день в 2:00 UTC (4:00 по польскому времени)
   workflow_dispatch: # Позволяет запускать вручную
   push:
     paths:
